[package]
name = "machine"
version = "0.1.0"
edition = "2021"

[dependencies]

wasm-bindgen = { version = "0.2.93" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

wasmer = { version = "4.4.0", features = ["cranelift"] }
wasmer-middlewares = { version = "4.4.0" }
wasmer-compiler-cranelift = { version = "4.4.0" }


# cargo --crate-type : https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#crate-type

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
